# batteries

./: .gitignore  README.md  requirements.txt  run_device.py  run_server.py
message_service/: __inti__.py  connector.py  devices.py  enums.py  gateway.py  traits.py  utils.py
server/: Cargo.toml
server/src/: main.rs  marshaller.rs  mod.rs  shards.rs  utils.rs
shards/: connector.py  devices.py  enums.py  requirements.txt  sockets.py  utils.py
transport/: connector.py  devices.py  utils.py
