[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
tokio-tungstenite = "*"
tracing = "0.1.32"
env_logger = "0.9.0"
serde_json = "1.0.79"

[dependencies.tokio]
features = [
    "time",
    "sync",
    "macros",
    "rt-multi-thread"
]

[dependencies.serde]
version = "1.0.136"
features = ["derive"]